# tomasulo

./: .gitignore  0.bootstrap.js  Cargo.toml  bootstrap.js  readme.md
.github/workflows/: deploy.yml
src/: inst.rs  lib.rs  main.rs  ser.rs  tui.rs
www/: index.html  index.js  package-lock.json  package.json
