[package]
name = "tomasulo"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = "0.4.2"
serde = "1.0"
serde_json = "1.0"
js-sys = "0.3"

[profile.dev]
overflow-checks = false # don't perform overflow check even in debug mode

[profile.release]
lto = true
panic = "abort"